# OpenBSW-Playground

./: .gitignore  .gitmodules  Diag101.md  README.md  RELEASING.md
.github/instructions/: openbsw-cpp-guidelines.instructions.md
.github/skills/error-patterns/: SKILL.md
.github/skills/puncover-tool/: SKILL.md
.github/skills/safety-crc/: SKILL.md
.github/skills/tracing/: SKILL.md
.github/skills/uds-tool/: SKILL.md
.github/workflows/: build.yml  docs.yml  release.yml  test.yml
.syspilot/: version.json
OpenBSW-SOVD-Demo/: CMakeLists.txt  CMakePresets.json  HACKATHON.md  README.md  demo.sh  docker-compose.yaml  prepare-gh-codespaces.md
OpenBSW-SOVD-Demo/doc/: demo-architecture.md  error-patterns-process.md  requirements-summary.md
OpenBSW-SOVD-Demo/grafana/dashboards/: flxc1000.json  openbsw-stub.json  openbsw.json
OpenBSW-SOVD-Demo/grafana/provisioning/dashboards/: default.yaml
OpenBSW-SOVD-Demo/grafana/provisioning/datasources/: sovd.yaml
OpenBSW-SOVD-Demo/openbsw-overlay/app/include/systems/: Flxc1000UdsSystem.h  UdsSystem.h  UdsSystemSelector.h
OpenBSW-SOVD-Demo/openbsw-overlay/app/include/uds/: DtcSimulator.h  Flxc1000Simulator.h  ReadIdentifierSimulated.h
OpenBSW-SOVD-Demo/openbsw-overlay/app/src/systems/: Flxc1000UdsSystem.cpp  UdsSystem.cpp
OpenBSW-SOVD-Demo/openbsw-overlay/app/src/uds/: DtcSimulator.cpp  Flxc1000Simulator.cpp  ReadIdentifierSimulated.cpp
OpenBSW-SOVD-Demo/openbsw-overlay/configuration/include/app/: appConfig.h
OpenBSW-SOVD-Demo/openbsw-overlay/libs/doip/src/doip/server/: DoIpServerConnectionHandler.cpp
OpenBSW-SOVD-Demo/openbsw-overlay/libs/uds/include/uds/dtc/: DiagnosticTroubleCode.h  DiagnosticTroubleCodeStore.h
OpenBSW-SOVD-Demo/openbsw-overlay/libs/uds/include/uds/services/cleardiagnosticinformation/: ClearDiagnosticInformation.h
OpenBSW-SOVD-Demo/openbsw-overlay/libs/uds/include/uds/services/readdtcinformation/: ReadDTCInformation.h
OpenBSW-SOVD-Demo/openbsw-overlay/libs/uds/src/services/cleardiagnosticinformation/: ClearDiagnosticInformation.cpp
OpenBSW-SOVD-Demo/openbsw-overlay/libs/uds/src/services/readdtcinformation/: ReadDTCInformation.cpp
OpenBSW-SOVD-Demo/openbsw-overlay/transportConfiguration/include/transport/: TransportConfiguration.h
OpenBSW-SOVD-Demo/real-sovd-cda/: Dockerfile  README.md  entrypoint.sh  opensovd-cda.toml
OpenBSW-SOVD-Demo/real-sovd-cda/odx-gen/: Dockerfile  OpenBSW.mdd  OpenBSW.pdx  generate_mdd.py  generate_openbsw.py  generate_pdx.sh  openbsw_ecu.json
OpenBSW-SOVD-Demo/real-sovd-cda/odx-gen/FLXC1000/: flxc1000_summary.json  generate_openbsw.py
OpenBSW-SOVD-Demo/sovd-cda/: catalog.json  main.py  requirements.txt
doc/: conf.py  index.rst  releasenotes.md  traceability.rst
doc/architecture/: components.rst  index.rst
doc/implementation/: index.rst  sources.rst
doc/requirements/: index.rst
doc/sovd-demo/: index.rst  rg1_ecu_simulation.rst  rg2_real_cda.rst  rg3_stub_cda.rst  rg4_doip_communication.rst  rg5_build_deployment.rst  rg6_interop_fixes.rst  rg7_data_model.rst  rg8_observability.rst  tests_rg1.rst  tests_rg2.rst  tests_rg3.rst  tests_rg4.rst  tests_rg5.rst  tests_rg6.rst  tests_rg7.rst  tests_rg8.rst
projects/project-manager/: CR-001-ascii-art-to-mermaid.md
tests/: conftest.py  pytest.ini  requirements.txt
tests/ecu/: test_diag_session.py  test_doip_connect.py  test_doip_protocol.py  test_dtc.py  test_interop_regression.py  test_rdbi.py  test_rg1_supplementary.py  test_sensor_bounds.py  test_tester_present.py  test_wdbi.py
tests/grafana/: conftest.py  test_dashboard.py  test_livedata.py
tests/sovd/: test_components.py  test_data.py  test_faults.py  test_health.py
tests/unit/: test_catalog.py  test_uds_helpers.py
